--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,14 @@
 apply plugin: 'com.android.application'
 apply plugin: 'com.neenbedankt.android-apt'
 apply from: '../gradle/contractTest.gradle'
+apply from: '../gradle/checkstyle.gradle'
 
 android {
     compileSdkVersion 25
     buildToolsVersion "25.0.2"
     defaultConfig {
         applicationId "example.com.mvpexample"
-        minSdkVersion 25
+        minSdkVersion 23
         targetSdkVersion 25
         versionCode 1
         versionName "1.0"
@@ -28,10 +29,13 @@ dependencies {
     })
 
     //Support Libs
-    compile 'com.android.support:appcompat-v7:25.1.1'
-    compile 'com.android.support:recyclerview-v7:25.1.1'
-    compile 'com.android.support:design:25.1.1'
-    compile 'com.android.support:support-annotations:25.1.1'
+    compile 'com.android.support:appcompat-v7:25.3.0'
+    compile 'com.android.support:recyclerview-v7:25.3.0'
+    compile 'com.android.support:design:25.3.0'
+    compile 'com.android.support:support-annotations:25.3.0'
+
+    //Butterknife
+    compile 'com.jakewharton:butterknife:7.0.1'
 
     //Dagger
     apt 'com.google.dagger:dagger-compiler:2.0.2'
@@ -56,13 +60,13 @@ dependencies {
 
     //Timber
     compile 'com.jakewharton.timber:timber:4.1.2'
-    compile 'com.android.support:support-annotations:25.1.1'
+    compile 'com.android.support:support-annotations:25.3.0'
 
     //Gson
     compile 'com.google.code.gson:gson:2.7'
 
-    //Glide
-    compile "com.github.bumptech.glide:glide:3.7.0"
+    //picaso
+    compile 'com.squareup.picasso:picasso:2.5.2'
 
     //Unit Test
     testCompile 'junit:junit:4.12'
