Fixed ContractTesting Added 1st unit test Refactored Adapter for easy unit testing

--- a/gradle/contractTest.gradle
+++ b/gradle/contractTest.gradle
@@ -1,13 +1,13 @@
 //
 //Test specific options go here.
-//Note - integrationTest depends on must be project specific as well as exclude categories.
+//Note - contractTest depends on must be project specific as well as exclude categories.
 //
 def contractTests = false
 
 android {
 
     sourceSets {
-        //include the integration test folder
+        //include the contract test folder
         test.java.srcDirs +=  file('src/contractTest/java')
     }
 
@@ -22,12 +22,12 @@ android {
             if (contractTests.toBoolean()) {
                 println "Contract Tests Only for " + it.name
                 options {
-                    excludeCategories 'com.bam.test_module.categories.UnitTest'
+                    excludeCategories 'com.example.mvpexample.categories.UnitTest'
                 }
             } else {
                 println "Unit Tests Only for " + it.name
                 options {
-                    excludeCategories 'com.bam.test_module.categories.IntegrationTest'
+                    excludeCategories 'com.example.mvpexample.categories.ContractTest'
                 }
             }
         }
@@ -39,15 +39,15 @@ android {
  */
 task contractTest(
         type: Test,
-        description: 'Run integration tests only. Pass in \'-Pcontract=true\'',
-        dependsOn: ["testDebugUnitTest", 'clean']) {
+        description: 'Run contract tests only. Pass in \'-Pcontract=true\'',
+        dependsOn: ["testDebugUnitTest"]) {
 
     //Here for task completion, not actually used since sub task of testDebugUnitTest
     testClassesDir = file("src/contractTest/java/");
     classpath = files("$System.env.ANDROID_HOME/sources/android-18")
 
     //
-    //Turn on integration testing when argument exists and is true
+    //Turn on contract testing when argument exists and is true
     //
     if (project.hasProperty('contract')) {
         println contract
