--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,17 +22,23 @@ android {
     }
 }
 
+//Required for androidTestCompile collisions with annotation library
+//https://github.com/JakeWharton/u2020/blob/05a57bf43b9b61f16d32cbe8717af77cd608b0fb/build.gradle#L136-L140
+configurations.all {
+    resolutionStrategy {
+        force 'com.android.support:support-annotations:25.3.1'
+    }
+}
+
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
-        exclude group: 'com.android.support', module: 'support-annotations'
-    })
+
 
     //Support Libs
-    compile 'com.android.support:appcompat-v7:25.3.0'
-    compile 'com.android.support:recyclerview-v7:25.3.0'
-    compile 'com.android.support:design:25.3.0'
-    compile 'com.android.support:support-annotations:25.3.0'
+    compile 'com.android.support:appcompat-v7:25.3.1'
+    compile 'com.android.support:recyclerview-v7:25.3.1'
+    compile 'com.android.support:design:25.3.1'
+    compile 'com.android.support:support-annotations:25.3.1'
 
     //Butterknife
     compile 'com.jakewharton:butterknife:7.0.1'
@@ -60,7 +66,6 @@ dependencies {
 
     //Timber
     compile 'com.jakewharton.timber:timber:4.1.2'
-    compile 'com.android.support:support-annotations:25.3.0'
 
     //Gson
     compile 'com.google.code.gson:gson:2.7'
@@ -76,4 +81,16 @@ dependencies {
     testCompile 'org.mockito:mockito-core:2.0.7-beta'
     testCompile "org.robolectric:shadows-multidex:3.0"
     testCompile 'org.assertj:assertj-core:1.7.1'
+
+    //Espresso Test
+    androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2.2'
+    androidTestCompile 'com.android.support.test:runner:0.5'
+
+    androidTestCompile('com.android.support.test.espresso:espresso-contrib:2.2') {
+        // Necessary to avoid version conflicts
+        exclude group: 'com.android.support', module: 'appcompat'
+        exclude group: 'com.android.support', module: 'support-v4'
+        exclude group: 'com.android.support', module: 'support-annotations'
+        exclude module: 'recyclerview-v7'
+    }
 }
