Created Espresso tests using double scope injection from the application.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,7 +12,7 @@ android {
         targetSdkVersion 25
         versionCode 1
         versionName "1.0"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner 'com.example.mvpexample.application.MvpExampleTestRunner'
     }
     buildTypes {
         release {
@@ -44,9 +44,9 @@ dependencies {
     compile 'com.jakewharton:butterknife:7.0.1'
 
     //Dagger
-    apt 'com.google.dagger:dagger-compiler:2.0.2'
+    apt 'com.google.dagger:dagger-compiler:2.8'
     provided 'org.glassfish:javax.annotation:10.0-b28'
-    compile 'com.google.dagger:dagger:2.0.2'
+    compile 'com.google.dagger:dagger:2.8'
 
     //Retrofit
     compile "com.squareup.retrofit2:retrofit:2.1.0"
@@ -85,7 +85,8 @@ dependencies {
     //Espresso Test
     androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2.2'
     androidTestCompile 'com.android.support.test:runner:0.5'
-
+    androidTestCompile 'com.android.support.test:rules:0.5'
+    androidTestCompile 'com.android.support.test.espresso:espresso-intents:2.2.2'
     androidTestCompile('com.android.support.test.espresso:espresso-contrib:2.2') {
         // Necessary to avoid version conflicts
         exclude group: 'com.android.support', module: 'appcompat'
@@ -93,4 +94,9 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
         exclude module: 'recyclerview-v7'
     }
+    androidTestApt "com.google.dagger:dagger-compiler:2.8"
+    //androidTestCompile 'org.mockito:mockito-core:2.0.7-beta'
+    androidTestCompile 'org.mockito:mockito-android:2.6.2'
+
+    androidTestAnnotationProcessor 'com.google.dagger:dagger-compiler:2.8'
 }
