--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,4 @@
 apply plugin: 'com.android.application'
-apply plugin: 'com.neenbedankt.android-apt'
 apply from: '../gradle/contractTest.gradle'
 apply from: '../gradle/checkstyle.gradle'
 
@@ -33,7 +32,6 @@ configurations.all {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
 
-
     //Support Libs
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support:recyclerview-v7:25.3.1'
@@ -44,9 +42,12 @@ dependencies {
     compile 'com.jakewharton:butterknife:7.0.1'
 
     //Dagger
-    apt 'com.google.dagger:dagger-compiler:2.8'
-    provided 'org.glassfish:javax.annotation:10.0-b28'
-    compile 'com.google.dagger:dagger:2.8'
+    annotationProcessor "com.google.dagger:dagger-compiler:2.11-rc1"
+    provided 'javax.annotation:jsr250-api:1.0'
+    compile 'com.google.dagger:dagger:2.11-rc1'
+    compile "com.google.dagger:dagger-android-support:2.11-rc1" // because we use the support libraries
+    compile "com.google.dagger:dagger-android:2.11-rc1"
+    annotationProcessor "com.google.dagger:dagger-android-processor:2.11-rc1"
 
     //Retrofit
     compile "com.squareup.retrofit2:retrofit:2.1.0"
@@ -94,8 +95,8 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
         exclude module: 'recyclerview-v7'
     }
-    androidTestApt "com.google.dagger:dagger-compiler:2.8"
+    androidTestCompile "com.google.dagger:dagger-android:2.11-rc1"
     androidTestCompile 'com.squareup.retrofit2:retrofit-mock:2.1.0'
     androidTestCompile 'org.mockito:mockito-android:2.6.2'
-    androidTestAnnotationProcessor 'com.google.dagger:dagger-compiler:2.8'
+    androidTestAnnotationProcessor 'com.google.dagger:dagger-compiler:2.11-rc1'
 }
