--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,6 +69,13 @@ dependencies {
     }
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
 
+    //Rx
+    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    compile 'io.reactivex.rxjava2:rxjava:2.1.0'
+
+    //Rx Lint Checker - https://bitbucket.org/littlerobots/rxlint
+    compile 'nl.littlerobots.rxlint:rxlint:1.3'
+
     //Timber
     compile 'com.jakewharton.timber:timber:4.5.1'
 
