--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,6 +56,11 @@ dependencies {
     compile "com.google.dagger:dagger-android:2.11"
     annotationProcessor "com.google.dagger:dagger-android-processor:2.11"
 
+    //RxBindings
+    compile 'com.jakewharton.rxbinding2:rxbinding:2.0.0'
+    compile 'com.jakewharton.rxbinding2:rxbinding-appcompat-v7:2.0.0'
+    compile 'com.jakewharton.rxbinding2:rxbinding-recyclerview-v7:2.0.0'
+
     //okhttp
     compile 'com.squareup.okhttp3:okhttp:3.2.0'
     compile 'com.squareup.okhttp3:okhttp-urlconnection:3.2.0'
