--- a/app/build.gradle
+++ b/app/build.gradle
@@ -82,6 +82,9 @@ dependencies {
     //Rx Lint Checker - https://bitbucket.org/littlerobots/rxlint
     compile 'nl.littlerobots.rxlint:rxlint:1.3'
 
+    //RxRelay
+    compile 'com.jakewharton.rxrelay2:rxrelay:2.0.0'
+
     //Timber
     compile 'com.jakewharton.timber:timber:4.5.1'
 
